The commit: - Allows accept responses in JSON-RPC 1.0 format; - Makes the library compatible with java 10+;